--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
 </tr>
 <tr>
 <td>Assignment 1</td>
-<td><a href="http://www.cs.gsu.edu/~csclxh/csc4370_6370/Assignments/Assignment1.pdf">Link to assignment1</a></td>
+<td><a href="http://www.cs.gsu.edu/~csclxh/csc4370_6370/Assignments/Assignment1.pdf">assignment1</a></td>
+</tr>
+<tr>
+<td>Assignment 2</td>
+<td><a href="http://grid.cs.gsu.edu/~csclxh/csc4370_6370/CScWebPro_CalenderFA15.htm">assignment 2</a></td>
+</tr>
+<tr>
+<td>Assignment 3</td>
+<td><a href="http://grid.cs.gsu.edu/~csclxh/csc4370_6370/CScWebPro_CalenderFA15.htm">assignment 3</a></td>
 </tr>
 <tr>
 <td>project 1</td>
-<td><a href="http://www.cs.gsu.edu/~csclxh/csc4370_6370/PRESENTATION%20GRADE%20SHEET.pdf">link to project</a></td>
+<td><a href="http://www.cs.gsu.edu/~csclxh/csc4370_6370/PRESENTATION%20GRADE%20SHEET.pdf">project</a></td>
 
 </tr>
 </table>
@@ -49,11 +57,12 @@
 <li>I Too Had A Love Story -<span class="mname">Ravinder Singh</span></li>
 <li>The Notebook- <span class="mname">Nicholas Sparks</span></li>
 </ul>
+<h3>Education and Experience</h3>
 <ul>
 <li><span class="heading">Education</span>
 <ul>
  <li>B.Tech,<span class="mname">Computer Science</span>,JNTUK</li>
- <li>MS,<span class="mname">Computer Science</span>,Georgia State University</li>
+ <li>MS,<span class="mname">Computer Science</span>,<span class="mname">Georgia State</span> University</li>
 </ul></li>
  <li><span class="heading">Experience</span>
  <ol>
@@ -70,7 +79,8 @@
  <ol>
    <li><a href="http://www.engadget.com/">www.engadget.com</a></li>
    <li><a href="https://www.netflix.com/">netflix</a></li>
-   <li><a href="https://www.facebook.com/">facebook</a></li>
+   <li><a href="https://www.youtube.com/">youtube</a></li>
    </ol>
+<h3><a href="external.css" download>Download external style sheet here</a></h3>
 </body>
 </html>
